fix: fix scrollbar appearing

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,7 +11,7 @@
 }
 
 .container {
-    min-height: 100vh;
+    max-height: 100vh;
     display: flex;
     flex-direction: column;
 }
